sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: not found: value getValeurs
      if(getValeurs(j-1)>casei){
         ^